--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=This library depends on Google Translate Service.
 category=Data Processing
 url=https://github.com/horihiro/esp8266-google-home-notifier
 architectures=esp8266
-includes=esp8266-google-home-notifier
+includes=esp8266-google-home-notifier.h
