--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.0.0
 author=horihiro
 maintainer=horihiro
 sentence=Send notifications to Google Home from esp8266.
-paragraph=This library depends on Google Translate Service.
+paragraph=This library requires esp8266 2.5.0 or higher and esp8266-google-tts which depends on Google Translate Service.
 category=Data Processing
 url=https://github.com/horihiro/esp8266-google-home-notifier
 architectures=esp8266
