--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=esp8266-google-home-notifier
 version=1.0.2
 author=horihiro
 maintainer=horihiro
-sentence=Send notifications to Google Home from esp8266.
+sentence=Send notifications to Google Home from esp8266/32.
 paragraph=This library requires esp8266-google-tts which depends on Google Translate Service.
 category=Data Processing
 url=https://github.com/horihiro/esp8266-google-home-notifier
