--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=esp8266-google-home-notifier
-version=1.0.3-beta
+version=1.0.4
 author=horihiro
 maintainer=horihiro
 sentence=Send notifications to Google Home from esp8266/32.
