Specify library dependencies in library.properties
Specifying the library dependencies in the depends field of library.properties causes the Arduino Library Manager (Arduino IDE 1.8.10 and newer) to offer to install any missing dependencies during installation of this library. "arduino-cli lib install" will automatically install the dependencies (arduino-cli 0.7.0 and newer).

--- a/library.properties
+++ b/library.properties
@@ -8,3 +8,4 @@ category=Data Processing
 url=https://github.com/horihiro/esp8266-google-home-notifier
 architectures=esp8266,esp32
 includes=esp8266-google-home-notifier.h
+depends=esp8266-google-tts
